--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-OWNER_NAME="Enzo"
+OWNER_NAME="Vainu"
 PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
-AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME= "Enzo2541"
+AUTO_DOWNLOAD_STATUS="yes"
+BOT_NAME= "Vainu"
 IMAGE_MENU= "https://telegra.ph/file/0c225f7da5616cdcbec80.jpg"
-BOT_OWNER=cracker1
-NUMERO_OWNER= "254784115803"
-OWNER_NAME= "᚛Enzo2541᚜"
+BOT_OWNER=vainu
+NUMERO_OWNER= "918415830202"
+OWNER_NAME= "᚛Vainu᚜"
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
 GITHUB_GIT=https://apis.ibrahimadams.us.kg
 WARN_COUNT= ""
