--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,12 +1,12 @@
-OWNER_NAME="FedoRA"
-PREFIX="~"
-PUBLIC_MODE='non'
-AUTO_READ_STATUS="non"
-AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "GOD-NIKA"
+OWNER_NAME="Vainu"
+PREFIX="-"
+PUBLIC_MODE='yes'
+AUTO_READ_STATUS="no"
+AUTO_DOWNLOAD_STATUS="no"
+BOT_NAME= "vainu"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
-NUMERO_OWNER= "22891733300"
-OWNER_NAME= "᚛M๏𝓷keℽ D Lบffy᚜"
+NUMERO_OWNER= "918415830202"
+OWNER_NAME= "᚛Vainu᚜"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
