--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-OWNER_NAME="Vainu"
+OWNER_NAME="۝vAiPA۝"
 PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="yes"
-BOT_NAME= "Vainu"
+BOT_NAME= "۝vAiPA۝"
 IMAGE_MENU= "https://telegra.ph/file/0c225f7da5616cdcbec80.jpg"
-BOT_OWNER=vainu
-NUMERO_OWNER= "918415830202"
-OWNER_NAME= "᚛Vainu᚜"
+BOT_OWNER="۝vAiPA۝"
+NUMERO_OWNER= "917005658594"
+OWNER_NAME= "᚛۝vAiPA۝᚜"
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
 GITHUB_GIT=https://apis.ibrahimadams.us.kg
 WARN_COUNT= ""
