--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,12 +1,12 @@
-OWNER_NAME="Vainu"
+OWNER_NAME="۝vAiPA۝"
 PREFIX="-"
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="no"
 AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME= "vainu"
+BOT_NAME= "۝vAiPA۝"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
-NUMERO_OWNER= "918415830202"
-OWNER_NAME= "᚛Vainu᚜"
+NUMERO_OWNER= "917005658594"
+OWNER_NAME= "᚛۝vAiPA۝᚜"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
