--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,12 +1,12 @@
-OWNER_NAME="۝vAiPA۝"
-PREFIX="-"
+OWNER_NAME="۝AstrO۝"
+PREFIX="."
 PUBLIC_MODE='yes'
-AUTO_READ_STATUS="no"
+AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME= "۝vAiPA۝"
+BOT_NAME= "۝AstrO۝"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
 NUMERO_OWNER= "917005658594"
-OWNER_NAME= "᚛۝vAiPA۝᚜"
+OWNER_NAME= "۝AstrO۝"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
