--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-OWNER_NAME="۝vAiPA۝"
+OWNER_NAME="۝AstrO۝
 PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="yes"
-BOT_NAME= "۝vAiPA۝"
+BOT_NAME= "۝AstrO۝"
 IMAGE_MENU= "https://telegra.ph/file/0c225f7da5616cdcbec80.jpg"
-BOT_OWNER="۝vAiPA۝"
+BOT_OWNER="۝AstrO۝"
 NUMERO_OWNER= "917005658594"
-OWNER_NAME= "᚛۝vAiPA۝᚜"
+OWNER_NAME= "۝AstrO۝"
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
 GITHUB_GIT=https://apis.ibrahimadams.us.kg
 WARN_COUNT= ""
