--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,12 +1,12 @@
-OWNER_NAME="۝AstrO۝"
+OWNER_NAME="۝vainu۝"
 PREFIX="."
 PUBLIC_MODE='yes'
-AUTO_READ_STATUS="yes"
+AUTO_READ_STATUS="no"
 AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME= "۝AstrO۝"
+BOT_NAME= "۝vainu۝"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
-NUMERO_OWNER= "917085345102"
-OWNER_NAME= "۝AstrO۝"
+NUMERO_OWNER= "918415830202"
+OWNER_NAME= "۝vainu۝"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
