--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-OWNER_NAME="۝AstrO۝"
+OWNER_NAME="۝vainu۝"
 PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="yes"
-BOT_NAME= "۝AstrO۝"
+BOT_NAME= "۝vainu۝"
 IMAGE_MENU= "https://telegra.ph/file/0c225f7da5616cdcbec80.jpg"
 BOT_OWNER="۝AstrO۝"
-NUMERO_OWNER= "917085345102"
-OWNER_NAME= "۝AstrO۝"
+NUMERO_OWNER= "918415830202"
+OWNER_NAME= "۝vainu۝"
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
-GITHUB_GIT=https://apis.ibrahimadams.us.kg
+GITHUB_GIT=https://apis.ibrahimadams.ius.kg
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
 STARTING_BOT_MESSAGE='yes'
